version bump, troubleshooting jar build