@@ -1,36 +1,41 @@
-plugins {
-    id 'java'
-    id 'application'
-}
-
-group 'org.chainmakers.kmdice'
-version '0.1.2'
-
-sourceCompatibility = 1.8
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'Program'
+buildscript {
+    repositories {
+        mavenCentral()
     }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    dependencies {
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
+    }
 }
 
-//task fatJar(type: Jar) {
-//    manifest {
-//        attributes 'Implementation-Title': 'KMDice',
-//                'Implementation-Version': version,
-//                'Main-Class': 'Program'
-//    }
-//    baseName = project.name
-//    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-//    with jar
-//}
+apply plugin: 'application'
+apply plugin: 'com.google.osdetector'
 
-repositories {
-    mavenCentral()
-}
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'com.google.code.gson:gson:2.8.5'
+    compile "org.openjfx:javafx-base:11:linux"
+    compile "org.openjfx:javafx-graphics:11:linux"
+    compile "org.openjfx:javafx-controls:11:linux"
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8'
+
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
 }
